<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018.  citizenapp project
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/showMobileIdMnu"
        android:icon="@drawable/ic_person"
        android:title="@string/showMobileIdMenuLabel" />
    <item
        android:id="@+id/requestForModificationMnu"
        android:icon="@drawable/ic_edit"
        android:title="@string/requestForModificationMenuLabel" />
    <item
        android:id="@+id/displayQrCodeMnu"
        android:icon="@drawable/qr_code_green"
        android:title="@string/displayQrCodeMenuLabel" />
    <item
        android:id="@+id/sendIdToDeviceMnu"
        android:icon="@drawable/ic_send"
        android:title="@string/sendIdToDeviceMenuLabel" />
    <item
        android:id="@+id/registrationCentersMnu"
        android:icon="@drawable/ic_location"
        android:title="@string/registrationCenterMenuLabel" />
    <item
        android:id="@+id/signOutMnu"
        android:icon="@drawable/ic_lock"
        android:title="@string/signOutMenuLabel" />
</menu>