<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="@dimen/signCardMargin"
    tools:context=".ui.SignInActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SignInActivity">

        <ImageView
            android:id="@+id/logoImv"
            android:layout_width="@dimen/logoSize"
            android:layout_height="@dimen/logoSize"
            android:layout_marginTop="@dimen/cardKeyLineSize"
            android:contentDescription="@string/companyLogoDescription"
            android:src="@drawable/ic_fingerprint"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/cardKeyLineSize" />

        <android.support.constraint.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/cardKeyLineSize" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/signUpBtn"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/idNumberTxt"
                style="@style/inputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/viewMargin_8"
                android:layout_marginTop="@dimen/viewMargin_8"
                android:drawableStart="@drawable/ic_person"
                android:ems="10"
                android:hint="@string/idHint"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/signUpBtn"
            style="@style/actionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/viewMargin_56"
            android:text="@string/signUpButtonText"
            android:textColor="#fff"
            app:layout_constraintBottom_toTopOf="@+id/notSignedUpMessage"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />

        <TextView
            android:id="@+id/notSignedUpMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/viewMargin_32"
            android:layout_marginStart="@dimen/viewMargin_8"
            android:text="@string/alreadySignedUpMessage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/signUpLink"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />

        <Button
            android:id="@+id/signUpLink"
            style="?android:borderlessButtonStyle"
            android:textColor="@color/primaryDarkColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/viewMargin_8"
            android:layout_marginStart="@dimen/viewMargin_4"
            android:text="@string/signInMessage"
            app:layout_constraintBottom_toBottomOf="@+id/notSignedUpMessage"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/notSignedUpMessage"
            app:layout_constraintTop_toTopOf="@+id/notSignedUpMessage" />

        <ProgressBar
            android:id="@+id/fetchPbr"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/fetchLoadingTxt"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/logoImv"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/fetchLoadingTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/fetching_id_data_message"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fetchPbr" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>